# mcp-git-ingest

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_git_ingest/: consts.py  main.py
